crates/auto-lang/test/cookbook/errors/001_boxed_error/boxed_error.a2r.rs
// Auto-generated by a2r transpiler

// a2r Standard Library (from crate)
#[allow(unused_imports)]
use auto_lang::a2r_std;
use auto_lang::a2r_std::*;

use std::error::Error;
fn main() -> Result<(), Box<dyn std::error::Error>> {
    let msg: String = "hello".to_string();
    let result = Ok(msg.to_string());
    let val = result?;
    println!("{:?}", val);
    Ok(())
}
